# yadirmenu

./: README.md  README.org  pyproject.toml
examples/: yadirmenu_example.sh
examples/menuroot/: 03_script_pwd.sh  04_script_ls.sh
examples/menuroot/01_submenu1/: 01_hostname.sh  02_date.sh
examples/menuroot/02_submenu2/: 01_ifconfig.sh  02_ping_internet.sh
src/yadirmenu/: __main__.py  pylintrc  pymenu.py  yadirmenu.py
